--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,18 @@
     "bootstrap": "~3.2.0",
     "traceur": "0.0.79",
     "angular-messages": "~1.3.8"
-  }
+  },
+  "homepage": "https://github.com/qiangli/apm-template",
+  "authors": [
+    "apm"
+  ],
+  "description": "",
+  "main": "",
+  "license": "MIT",
+  "ignore": [
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
