--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,9 @@
   "name": "template",
   "version": "0.2.0",
   "dependencies": {
-    "jquery": "~2.1.0",
     "angular": "~1.3.0",
-    "angular-animate": "~1.3.0",
-    "angular-route": "~1.3.0",
-    "angular-sanitize": "~1.3.0",
     "bootstrap": "~3.2.0",
-    "traceur": "0.0.79",
-    "angular-messages": "~1.3.8"
+    "traceur": "0.0.79"
   },
   "homepage": "https://github.com/qiangli/apm-template",
   "authors": [
