--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,7 @@
   "version": "0.2.0",
   "dependencies": {
     "angular": "~1.3.0",
-    "bootstrap": "~3.2.0",
-    "traceur": "0.0.79"
+    "bootstrap": "~3.2.0"
   },
   "homepage": "https://github.com/qiangli/apm-template",
   "authors": [
